# metody-numeryczne

./: .gitignore  CMakeLists.txt  main.cpp
consts/: Constants.h
labOneMethods/: Derivative.cpp  Derivative.h  GaussMethod.cpp  GaussMethod.h  JordanMethod.cpp  JordanMethod.h
labThreeMethods/: Gradient.cpp  Gradient.h
labTwoMethods/: UARLMethod.cpp  UARLMethod.h
utils/: GeneralUtils.cpp  GeneralUtils.h  MatrixUtils.cpp  MatrixUtils.h  PrintUtils.cpp  PrintUtils.h
